--- a/TouchSenderTablet.GUI/Views/MainPage.xaml
+++ b/TouchSenderTablet.GUI/Views/MainPage.xaml
@@ -2,11 +2,13 @@
     x:Class="TouchSenderTablet.GUI.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="using:TouchSenderTablet.GUI.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="using:CommunityToolkit.WinUI.Controls"
     xmlns:ui="using:CommunityToolkit.WinUI"
     NavigationCacheMode="Enabled"
+    Unloaded="Page_Unloaded"
     mc:Ignorable="d">
     <Page.Resources>
         <!--  Spacing between cards  -->
@@ -36,6 +38,8 @@
                 <Setter Property="Margin" Value="1,16,0,12" />
             </Style.Setters>
         </Style>
+        <converters:InvertedBooleanConverter x:Key="InvertedBooleanConverter" />
+        <converters:IntegerToHalfValueDoubleConverter x:Key="HalfValueConverter" />
     </Page.Resources>
 
     <StackPanel HorizontalAlignment="Stretch" Spacing="0">
@@ -50,7 +54,7 @@
                     Orientation="Horizontal"
                     Spacing="10"
                     Style="{StaticResource Card}">
-                    <Button Style="{StaticResource AccentButtonStyle}">
+                    <Button Command="{x:Bind ViewModel.StartTouchReceiverServiceCommand}" Style="{StaticResource AccentButtonStyle}">
                         <!--
                             ref: https://learn.microsoft.com/ja-jp/windows/apps/design/style/icons
                         -->
@@ -63,7 +67,7 @@
                         </StackPanel>
 
                     </Button>
-                    <Button Style="{StaticResource DefaultButtonStyle}">
+                    <Button Command="{x:Bind ViewModel.StopTouchReceiverServiceCommand}" Style="{StaticResource DefaultButtonStyle}">
                         <StackPanel Orientation="Horizontal" Spacing="4">
                             <SymbolIcon Symbol="Pause" />
                             <TextBlock
@@ -74,6 +78,68 @@
                     </Button>
                 </StackPanel>
             </StackPanel>
+            <StackPanel
+                Grid.Column="1"
+                Margin="20,0,0,0"
+                HorizontalAlignment="Left">
+                <TextBlock Style="{StaticResource MainHeaderTextBlockStyle}" Text="TouchSender State" />
+
+                <StackPanel
+                    Orientation="Vertical"
+                    Spacing="8"
+                    Style="{StaticResource Card}">
+                    <CheckBox
+                        VerticalContentAlignment="Center"
+                        Content="Enable realtime TouchSender monitor"
+                        IsChecked="{x:Bind ViewModel.IsTouchReceiverCanvasEnabled, Mode=TwoWay}"
+                        IsEnabled="{x:Bind ViewModel.StartTouchReceiverServiceCommand.IsRunning, Mode=OneWay, Converter={StaticResource InvertedBooleanConverter}}" />
+                    <Border
+                        HorizontalAlignment="Center"
+                        BorderBrush="{ThemeResource ControlStrokeColorSecondaryBrush}"
+                        BorderThickness="2"
+                        CornerRadius="{StaticResource ControlCornerRadius}"
+                        Visibility="{x:Bind ViewModel.IsTouchReceiverCanvasEnabled, Mode=OneWay}">
+                        <Canvas
+                            x:Name="MainCanvas"
+                            Width="{x:Bind ViewModel.CanvasWidth, Mode=OneWay}"
+                            Height="{x:Bind ViewModel.CanvasHeight, Mode=OneWay}"
+                            Background="{ThemeResource CardBackgroundFillColorSecondaryBrush}">
+                            <Ellipse
+                                Canvas.Left="{x:Bind ViewModel.TouchCircleX, Mode=OneWay}"
+                                Canvas.Top="{x:Bind ViewModel.TouchCircleY, Mode=OneWay}"
+                                Width="{x:Bind ViewModel.TouchCircleSize}"
+                                Height="{x:Bind ViewModel.TouchCircleSize}"
+                                Canvas.ZIndex="10"
+                                Fill="{ThemeResource SystemFillColorSuccessBrush}" />
+                            <Line
+                                Stroke="{ThemeResource ControlStrokeColorSecondaryBrush}"
+                                StrokeThickness="2"
+                                X1="0"
+                                X2="{x:Bind ViewModel.CanvasWidth, Mode=OneWay}"
+                                Y1="{x:Bind ViewModel.CanvasHeight, Mode=OneWay, Converter={StaticResource HalfValueConverter}}"
+                                Y2="{x:Bind ViewModel.CanvasHeight, Mode=OneWay, Converter={StaticResource HalfValueConverter}}" />
+                            <Line
+                                Stroke="{ThemeResource ControlStrokeColorSecondaryBrush}"
+                                StrokeThickness="2"
+                                X1="{x:Bind ViewModel.CanvasWidth, Mode=OneWay, Converter={StaticResource HalfValueConverter}}"
+                                X2="{x:Bind ViewModel.CanvasWidth, Mode=OneWay, Converter={StaticResource HalfValueConverter}}"
+                                Y1="0"
+                                Y2="{x:Bind ViewModel.CanvasHeight, Mode=OneWay}" />
+                        </Canvas>
+                    </Border>
+                    <Border
+                        Padding="8"
+                        HorizontalAlignment="Left"
+                        Background="{StaticResource SystemFillColorSuccessBrush}"
+                        CornerRadius="{StaticResource ControlCornerRadius}"
+                        Visibility="{x:Bind ViewModel.IsDataReceived, Mode=OneWay}">
+                        <TextBlock
+                            HorizontalAlignment="Left"
+                            Foreground="{StaticResource TextOnAccentAAFillColorPrimary}"
+                            Text="Data Recieved" />
+                    </Border>
+                </StackPanel>
+            </StackPanel>
 
         </Grid>
         <StackPanel Name="SettingsContainer">
@@ -81,37 +147,38 @@
             <TextBlock Style="{StaticResource SettingsSectionHeaderTextBlockStyle}" Text="Settings" />
             <StackPanel Spacing="{StaticResource SettingsCardSpacing}">
                 <toolkit:SettingsCard
-                    Description="Set the IP address shown here as the destination for the ZigSim application."
+                    Description="Set the IP address shown here as the destination of the TouchSender."
                     Header="Your Possible Local IPs"
                     HeaderIcon="{ui:FontIcon Glyph=&#xE701;}">
                     <TextBlock
                         FontWeight="Bold"
-                        Foreground="{StaticResource AccentTextFillColorPrimaryBrush}"
-                        Text="" />
+                        Foreground="{ThemeResource AccentTextFillColorPrimaryBrush}"
+                        Text="{x:Bind ViewModel.IpAddresses, Mode=OneWay}" />
 
                 </toolkit:SettingsCard>
                 <toolkit:SettingsCard
-                    Description="Enter the port number used by the ZigSim application. The default value is 50000."
+                    Description="Enter the port number used by the TouchSender. The default value is 50000."
                     Header="Port Number"
-                    HeaderIcon="{ui:FontIcon Glyph=&#xF0B9;}">
+                    HeaderIcon="{ui:FontIcon Glyph=&#xF0B9;}"
+                    IsEnabled="{x:Bind ViewModel.StartTouchReceiverServiceCommand.IsRunning, Mode=OneWay, Converter={StaticResource InvertedBooleanConverter}}">
                     <NumberBox
                         AcceptsExpression="False"
                         PlaceholderText="50000"
-                        Value="" />
+                        Value="{x:Bind ViewModel.PortNumber, Mode=TwoWay}" />
 
                 </toolkit:SettingsCard>
                 <toolkit:SettingsExpander
                     Description="Settings for touch input from ZigSim"
                     Header="Touch Inputs"
                     HeaderIcon="{ui:FontIcon Glyph=&#xE70A;}"
-                    IsExpanded="True">
+                    IsExpanded="{x:Bind ViewModel.IsTouchInputsSettingsExpanded, Mode=TwoWay}">
 
                     <toolkit:SettingsExpander.Items>
-                        <toolkit:SettingsCard Header="Left click while touching the device" HeaderIcon="{ui:FontIcon Glyph=&#xE7C9;}">
-                            <ToggleSwitch IsEnabled="True" IsOn="True" />
-                        </toolkit:SettingsCard>
-                        <toolkit:SettingsCard Header="Landscape mode" HeaderIcon="{ui:FontIcon Glyph=&#xE799;}">
-                            <ToggleSwitch />
+                        <toolkit:SettingsCard
+                            Header="Left click while touching the device"
+                            HeaderIcon="{ui:FontIcon Glyph=&#xE7C9;}"
+                            IsEnabled="{x:Bind ViewModel.StartTouchReceiverServiceCommand.IsRunning, Mode=OneWay, Converter={StaticResource InvertedBooleanConverter}}">
+                            <ToggleSwitch IsEnabled="True" IsOn="{x:Bind ViewModel.LeftClickWhileTouched, Mode=TwoWay}" />
                         </toolkit:SettingsCard>
                         <toolkit:SettingsCard Header="Horizontal mouse sensitivity" HeaderIcon="{ui:FontIcon Glyph=&#xE8AB;}">
                             <Grid>
@@ -129,7 +196,8 @@
                                     Maximum="5000"
                                     Minimum="0"
                                     TickFrequency="1000"
-                                    TickPlacement="Outside" />
+                                    TickPlacement="Outside"
+                                    Value="{x:Bind ViewModel.HorizontalSensitivity, Mode=TwoWay}" />
                                 <TextBlock
                                     Grid.Column="1"
                                     Width="40"
@@ -155,7 +223,8 @@
                                     Maximum="5000"
                                     Minimum="0"
                                     TickFrequency="1000"
-                                    TickPlacement="Outside" />
+                                    TickPlacement="Outside"
+                                    Value="{x:Bind ViewModel.VerticalSensitivity, Mode=TwoWay}" />
                                 <TextBlock
                                     Grid.Column="1"
                                     Width="40"
@@ -164,12 +233,6 @@
                                     Text="{Binding ElementName=VerticalSensitivitySlider, Path=Value}"
                                     TextAlignment="Right" />
                             </Grid>
-                        </toolkit:SettingsCard>
-                        <toolkit:SettingsCard
-                            Description="Depending on the orientation of the phone, the positive and negative values of the coordinates are reversed."
-                            Header="Invert axes"
-                            HeaderIcon="{ui:FontIcon Glyph=&#xE94D;}">
-                            <ToggleSwitch />
                         </toolkit:SettingsCard>
                     </toolkit:SettingsExpander.Items>
                 </toolkit:SettingsExpander>
