ボタンスタイルを変更
`Button`のスタイルを`DefaultButtonStyle`から`AccentButtonStyle`に変更しました。

--- a/TouchSenderTablet.GUI/Views/MainPage.xaml
+++ b/TouchSenderTablet.GUI/Views/MainPage.xaml
@@ -67,7 +67,7 @@
                         </StackPanel>
 
                     </Button>
-                    <Button Command="{x:Bind ViewModel.StopTouchReceiverServiceCommand}" Style="{StaticResource DefaultButtonStyle}">
+                    <Button Command="{x:Bind ViewModel.StopTouchReceiverServiceCommand}" Style="{StaticResource AccentButtonStyle}">
                         <StackPanel Orientation="Horizontal" Spacing="4">
                             <SymbolIcon Symbol="Pause" />
                             <TextBlock
