エラーダイアログ機能の追加とUIの更新
`MainWindow.xaml.cs` にエラーダイアログ表示メソッドを追加し、テーマ変更に対応するように更新しました。新しいクラス `ShowErrorDialogMessage` を作成し、エラーダイアログに必要な情報を保持します。`TouchReceiverCanvasService.cs` では、タイマーが実行中の場合に例外をスローする代わりに `Stop` メソッドを呼び出すように変更しました。プロジェクトファイルに `ErrorDialogContent.xaml` を追加し、ビルド時にコンパイルされるように設定しました。`MainViewModel.cs` では、ソケット例外をキャッチした際にエラーダイアログを表示するメッセージを送信するコードを追加しました。`ErrorDialogContent.xaml` と `ErrorDialogContent.xaml.cs` では、エラーダイアログのUIを定義し、エラーメッセージと詳細を表示するプロパティを実装しました。最後に、`MainPage.xaml` ではポート番号設定のUI要素が更新されました。

--- a/TouchSenderTablet.GUI/Views/MainPage.xaml
+++ b/TouchSenderTablet.GUI/Views/MainPage.xaml
@@ -163,6 +163,8 @@
                     IsEnabled="{x:Bind ViewModel.StartTouchReceiverServiceCommand.IsRunning, Mode=OneWay, Converter={StaticResource InvertedBooleanConverter}}">
                     <NumberBox
                         AcceptsExpression="False"
+                        Maximum="65535"
+                        Minimum="0"
                         PlaceholderText="50000"
                         Value="{x:Bind ViewModel.PortNumber, Mode=TwoWay}" />
 
