左クリックオプションの条件追加とUI改善
`TouchReceiverService.cs` で、`SingleTouchReactor` の `OnWhileTouched` および `OnReleased` イベントにおいて、`options.LeftClickWhileTouched` が `true` の場合のみ左クリックを行う条件を追加しました。

`MainViewModel.cs` では、`s_defaultCanvasWidth` を `s_defaultCanvasSize` に変更し、`CanvasWidth` と `CanvasHeight` の初期値を新しい定数に更新しました。また、キャンバスの初期化処理を `SetInitialCanvas` メソッドに移動し、`TouchCircleX` と `TouchCircleY` の初期値を設定しました。

`MainPage.xaml` では、`SettingsCard` の構造を変更し、`IsEnabled` プロパティを削除して `ToggleSwitch` を追加し、`ViewModel.LeftClickWhileTouched` にバインドしました。これにより、ユーザーが左クリックのオプションを直接切り替えられるようになりました。

--- a/TouchSenderTablet.GUI/Views/MainPage.xaml
+++ b/TouchSenderTablet.GUI/Views/MainPage.xaml
@@ -176,10 +176,7 @@
                     IsExpanded="{x:Bind ViewModel.IsTouchInputsSettingsExpanded, Mode=TwoWay}">
 
                     <toolkit:SettingsExpander.Items>
-                        <toolkit:SettingsCard
-                            Header="Left click while touching the device"
-                            HeaderIcon="{ui:FontIcon Glyph=&#xE7C9;}"
-                            IsEnabled="{x:Bind ViewModel.StartTouchReceiverServiceCommand.IsRunning, Mode=OneWay, Converter={StaticResource InvertedBooleanConverter}}">
+                        <toolkit:SettingsCard Header="Left click while touching the device" HeaderIcon="{ui:FontIcon Glyph=&#xE7C9;}">
                             <ToggleSwitch IsEnabled="True" IsOn="{x:Bind ViewModel.LeftClickWhileTouched, Mode=TwoWay}" />
                         </toolkit:SettingsCard>
                         <toolkit:SettingsCard Header="Horizontal mouse sensitivity" HeaderIcon="{ui:FontIcon Glyph=&#xE8AB;}">
