--- a/TouchSenderTablet.GUI/Views/ErrorDialogContent.xaml
+++ b/TouchSenderTablet.GUI/Views/ErrorDialogContent.xaml
@@ -3,11 +3,14 @@
     x:Class="TouchSenderTablet.GUI.Views.ErrorDialogContent"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="using:TouchSenderTablet.GUI.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:TouchSenderTablet.GUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
+    <Page.Resources>
+        <converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
+    </Page.Resources>
     <StackPanel
         HorizontalAlignment="Stretch"
         VerticalAlignment="Stretch"
@@ -15,7 +18,7 @@
 
         <TextBlock Text="{x:Bind ErrorMessage}" TextWrapping="Wrap" />
 
-        <StackPanel Spacing="4">
+        <StackPanel Spacing="4" Visibility="{x:Bind ErrorDetail, Converter={StaticResource StringToVisibilityConverter}}">
             <TextBlock Style="{ThemeResource BodyStrongTextBlockStyle}" Text="Detail" />
             <TextBlock Text="{x:Bind ErrorDetail}" TextWrapping="Wrap" />
         </StackPanel>
