--- a/TouchSenderTablet.GUI/Views/MainPage.xaml
+++ b/TouchSenderTablet.GUI/Views/MainPage.xaml
@@ -38,6 +38,16 @@
                 <Setter Property="Margin" Value="1,16,0,12" />
             </Style.Setters>
         </Style>
+        <Style x:Key="SensitivitySlider" TargetType="Slider">
+            <Style.Setters>
+                <Setter Property="Maximum" Value="1000" />
+                <Setter Property="Minimum" Value="0" />
+                <Setter Property="SmallChange" Value="10" />
+                <Setter Property="StepFrequency" Value="10" />
+                <Setter Property="TickFrequency" Value="100" />
+                <Setter Property="TickPlacement" Value="Outside" />
+            </Style.Setters>
+        </Style>
         <converters:InvertedBooleanConverter x:Key="InvertedBooleanConverter" />
         <converters:IntegerToHalfValueDoubleConverter x:Key="HalfValueConverter" />
     </Page.Resources>
@@ -192,10 +202,7 @@
                                     x:Name="HorizontalSensitivitySlider"
                                     MaxWidth="400"
                                     HorizontalAlignment="Stretch"
-                                    Maximum="5000"
-                                    Minimum="0"
-                                    TickFrequency="1000"
-                                    TickPlacement="Outside"
+                                    Style="{StaticResource SensitivitySlider}"
                                     Value="{x:Bind ViewModel.HorizontalSensitivity, Mode=TwoWay}" />
                                 <TextBlock
                                     Grid.Column="1"
@@ -219,10 +226,7 @@
                                     x:Name="VerticalSensitivitySlider"
                                     MaxWidth="400"
                                     HorizontalAlignment="Stretch"
-                                    Maximum="5000"
-                                    Minimum="0"
-                                    TickFrequency="1000"
-                                    TickPlacement="Outside"
+                                    Style="{StaticResource SensitivitySlider}"
                                     Value="{x:Bind ViewModel.VerticalSensitivity, Mode=TwoWay}" />
                                 <TextBlock
                                     Grid.Column="1"
