--- a/TouchSenderTablet.GUI/Views/SettingsPage.xaml
+++ b/TouchSenderTablet.GUI/Views/SettingsPage.xaml
@@ -11,8 +11,8 @@
     mc:Ignorable="d">
     <Page.Resources>
         <x:Double x:Key="SectionSpacing">20</x:Double>
-        <x:Double x:Key="SectionItemSpacing">8</x:Double>
-        <Thickness x:Key="SectionTitleMargin">0,0,0,12</Thickness>
+        <x:Double x:Key="SectionItemSpacing">4</x:Double>
+        <Thickness x:Key="SectionTitleMargin">0,12,0,12</Thickness>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <converters:EnumToBooleanConverter x:Key="EnumToBooleanConverter" />
         <converters:ElementThemeToStringConverter x:Key="ElementThemeToStringConverter" />
@@ -42,7 +42,7 @@
                     x:Uid="Settings_About"
                     Margin="{StaticResource SectionTitleMargin}"
                     Style="{ThemeResource SubtitleTextBlockStyle}" />
-                <StackPanel>
+                <StackPanel Spacing="{StaticResource SectionItemSpacing}">
                     <toolkit:SettingsCard Header="Log File" HeaderIcon="{ui:FontIcon Glyph=&#xE8E5;}">
                         <StackPanel Orientation="Horizontal" Spacing="12">
                             <ProgressRing IsActive="True" Visibility="{x:Bind ViewModel.ShowLogFileCommand.IsRunning, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}" />
