--- a/TouchSenderTablet.GUI/Views/MainPage.xaml
+++ b/TouchSenderTablet.GUI/Views/MainPage.xaml
@@ -50,6 +50,7 @@
         </Style>
         <converters:InvertedBooleanConverter x:Key="InvertedBooleanConverter" />
         <converters:IntegerToHalfValueDoubleConverter x:Key="HalfValueConverter" />
+        <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Page.Resources>
 
     <StackPanel HorizontalAlignment="Stretch" Spacing="0">
@@ -143,17 +144,34 @@
                                 Y2="{x:Bind ViewModel.CanvasHeight, Mode=OneWay}" />
                         </Canvas>
                     </Border>
-                    <Border
-                        Padding="8"
-                        HorizontalAlignment="Left"
-                        Background="{StaticResource SystemFillColorSuccessBrush}"
-                        CornerRadius="{StaticResource ControlCornerRadius}"
-                        Visibility="{x:Bind ViewModel.IsDataReceived, Mode=OneWay}">
-                        <TextBlock
+                    <StackPanel Orientation="Horizontal" Spacing="8">
+                        <Border
+                            Padding="8"
                             HorizontalAlignment="Left"
-                            Foreground="{StaticResource TextOnAccentAAFillColorPrimary}"
-                            Text="Data Recieved" />
-                    </Border>
+                            Background="{ThemeResource SystemFillColorSuccessBrush}"
+                            CornerRadius="{ThemeResource ControlCornerRadius}"
+                            Visibility="{x:Bind ViewModel.IsDataReceived, Mode=OneWay}">
+                            <TextBlock
+                                HorizontalAlignment="Left"
+                                Foreground="{ThemeResource TextOnAccentAAFillColorPrimary}"
+                                Text="Data Recieved" />
+                        </Border>
+                        <Border
+                            Padding="8"
+                            HorizontalAlignment="Left"
+                            Background="{ThemeResource SystemFillColorCautionBrush}"
+                            CornerRadius="{ThemeResource ControlCornerRadius}"
+                            Visibility="{x:Bind ViewModel.IsPayloadDropped, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+                            <StackPanel Orientation="Horizontal" Spacing="4">
+                                <TextBlock Foreground="{ThemeResource TextOnAccentAAFillColorPrimary}" Text="Dropped:" />
+                                <TextBlock
+                                    HorizontalAlignment="Left"
+                                    Foreground="{ThemeResource TextOnAccentAAFillColorPrimary}"
+                                    Text="{x:Bind ViewModel.DroppedPayloadCount, Mode=OneWay}" />
+                            </StackPanel>
+
+                        </Border>
+                    </StackPanel>
                 </StackPanel>
             </StackPanel>
 
