ローカライズ機能の追加とリソースの整理
ResourceExtensions.cs にリソースローダーを追加し、ローカライズされた文字列を取得するメソッドを実装しました。MainWindow.xaml.cs では、ダイアログの閉じるボタンのテキストをローカライズされた文字列に変更しました。

Resources.resw では、"Personalization" を "Appearance" に変更し、新しいエントリを追加しました。また、XML ヘッダーとスキーマを追加してリソースファイルの構造を明確にしました。

TouchSenderTablet.GUI.csproj では、アセンブリ名や著作権情報を追加し、不要なファイルを削除しました。MainViewModel.cs では、IP アドレスとネットワークエラーメッセージの表示をローカライズされた文字列に変更しました。

ErrorDialogContent.xaml では、エラーメッセージの詳細表示用のテキストブロックに UID を追加しました。

--- a/TouchSenderTablet.GUI/Views/ErrorDialogContent.xaml
+++ b/TouchSenderTablet.GUI/Views/ErrorDialogContent.xaml
@@ -19,7 +19,7 @@
         <TextBlock Text="{x:Bind ErrorMessage}" TextWrapping="Wrap" />
 
         <StackPanel Spacing="4" Visibility="{x:Bind ErrorDetail, Converter={StaticResource StringToVisibilityConverter}}">
-            <TextBlock Style="{ThemeResource BodyStrongTextBlockStyle}" Text="Detail" />
+            <TextBlock x:Uid="Detail" Style="{ThemeResource BodyStrongTextBlockStyle}" />
             <TextBlock Text="{x:Bind ErrorDetail}" TextWrapping="Wrap" />
         </StackPanel>
     </StackPanel>
