リソースファイルの更新とUIテキストの追加
リソースファイルに新しいデータを追加し、ユーザーインターフェースのテキストを更新しました。具体的には、メインの説明、モニターチェックボックス、データ受信、データドロップ、コントロールパネル、設定ヘッダー、IP設定、ポート番号設定、タッチ入力設定、マウス感度設定、スタート、ストップ、オープンのテキストが追加されました。また、XAMLファイル内のテキストブロックが新しいリソースに置き換えられ、UIDが追加されました。これにより、ローカライズが容易になり、ユーザーインターフェースがより一貫性のあるものになりました。

--- a/TouchSenderTablet.GUI/Views/MainPage.xaml
+++ b/TouchSenderTablet.GUI/Views/MainPage.xaml
@@ -55,10 +55,11 @@
 
     <StackPanel HorizontalAlignment="Stretch" Spacing="0">
         <TextBlock
+            x:Uid="MainExplanation"
             Margin="0,0,0,16"
-            Text="The cursor moves based on data received from the Touch Sender app.&#x0a;Note that if this window is in focus while a touch operation is performed, the cursor may not move smoothly."
+            FontSize="14"
             TextWrapping="WrapWholeWords" />
-        <TextBlock Style="{StaticResource MainHeaderTextBlockStyle}" Text="Control Panel" />
+        <TextBlock x:Uid="ControlPanelHeader" Style="{StaticResource MainHeaderTextBlockStyle}" />
 
         <Grid Name="MainContainer">
             <Grid.ColumnDefinitions>
@@ -77,9 +78,9 @@
                         <StackPanel Orientation="Horizontal" Spacing="4">
                             <SymbolIcon Symbol="Play" />
                             <TextBlock
+                                x:Uid="Start"
                                 HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                Text="Start" />
+                                VerticalAlignment="Center" />
                         </StackPanel>
 
                     </Button>
@@ -87,9 +88,9 @@
                         <StackPanel Orientation="Horizontal" Spacing="4">
                             <SymbolIcon Symbol="Pause" />
                             <TextBlock
+                                x:Uid="Stop"
                                 HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                Text="Stop" />
+                                VerticalAlignment="Center" />
                         </StackPanel>
                     </Button>
                 </StackPanel>
@@ -104,10 +105,10 @@
                     Spacing="8"
                     Style="{StaticResource Card}">
                     <CheckBox
+                        x:Uid="MonitorCheckbox"
                         Padding="8"
                         VerticalAlignment="Center"
                         VerticalContentAlignment="Center"
-                        Content="Enable realtime TouchSender monitor"
                         IsChecked="{x:Bind ViewModel.IsTouchReceiverCanvasEnabled, Mode=TwoWay}"
                         IsEnabled="{x:Bind ViewModel.StartTouchReceiverServiceCommand.IsRunning, Mode=OneWay, Converter={StaticResource InvertedBooleanConverter}}" />
                     <Border
@@ -152,9 +153,10 @@
                             CornerRadius="{ThemeResource ControlCornerRadius}"
                             Visibility="{x:Bind ViewModel.IsDataReceived, Mode=OneWay}">
                             <TextBlock
+                                x:Uid="DataReceived"
                                 HorizontalAlignment="Left"
-                                Foreground="{ThemeResource TextOnAccentAAFillColorPrimary}"
-                                Text="Data Recieved" />
+                                FontSize="12"
+                                Foreground="{ThemeResource TextOnAccentAAFillColorPrimary}" />
                         </Border>
                         <Border
                             Padding="8"
@@ -163,9 +165,10 @@
                             CornerRadius="{ThemeResource ControlCornerRadius}"
                             Visibility="{x:Bind ViewModel.IsPayloadDropped, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
                             <StackPanel Orientation="Horizontal" Spacing="4">
-                                <TextBlock Foreground="{ThemeResource TextOnAccentAAFillColorPrimary}" Text="Dropped:" />
+                                <TextBlock x:Uid="DataDropped" Foreground="{ThemeResource TextOnAccentAAFillColorPrimary}" />
                                 <TextBlock
                                     HorizontalAlignment="Left"
+                                    FontSize="12"
                                     Foreground="{ThemeResource TextOnAccentAAFillColorPrimary}"
                                     Text="{x:Bind ViewModel.DroppedPayloadCount, Mode=OneWay}" />
                             </StackPanel>
@@ -178,12 +181,9 @@
         </Grid>
         <StackPanel Name="SettingsContainer">
 
-            <TextBlock Style="{StaticResource SettingsSectionHeaderTextBlockStyle}" Text="Settings" />
+            <TextBlock x:Uid="SettingsHeader" Style="{StaticResource SettingsSectionHeaderTextBlockStyle}" />
             <StackPanel Spacing="{StaticResource SettingsCardSpacing}">
-                <toolkit:SettingsCard
-                    Description="Set the IP address shown here as the destination of the TouchSender."
-                    Header="Your Possible Local IPs"
-                    HeaderIcon="{ui:FontIcon Glyph=&#xE701;}">
+                <toolkit:SettingsCard x:Uid="IpSettings" HeaderIcon="{ui:FontIcon Glyph=&#xE701;}">
                     <TextBlock
                         FontWeight="Bold"
                         Foreground="{ThemeResource AccentTextFillColorPrimaryBrush}"
@@ -191,8 +191,7 @@
 
                 </toolkit:SettingsCard>
                 <toolkit:SettingsCard
-                    Description="Enter the port number used by the TouchSender. The default value is 50000."
-                    Header="Port Number"
+                    x:Uid="PortNumberSettings"
                     HeaderIcon="{ui:FontIcon Glyph=&#xF0B9;}"
                     IsEnabled="{x:Bind ViewModel.StartTouchReceiverServiceCommand.IsRunning, Mode=OneWay, Converter={StaticResource InvertedBooleanConverter}}">
                     <NumberBox
@@ -204,19 +203,15 @@
 
                 </toolkit:SettingsCard>
                 <toolkit:SettingsExpander
-                    Description="Settings for touch input from ZigSim"
-                    Header="Touch Inputs"
+                    x:Uid="TouchInputsSettings"
                     HeaderIcon="{ui:FontIcon Glyph=&#xE70A;}"
                     IsExpanded="{x:Bind ViewModel.IsTouchInputsSettingsExpanded, Mode=TwoWay}">
 
                     <toolkit:SettingsExpander.Items>
-                        <toolkit:SettingsCard Header="Left click while touching the device" HeaderIcon="{ui:FontIcon Glyph=&#xE7C9;}">
+                        <toolkit:SettingsCard x:Uid="LeftClickWhileTouching" HeaderIcon="{ui:FontIcon Glyph=&#xE7C9;}">
                             <ToggleSwitch IsEnabled="True" IsOn="{x:Bind ViewModel.LeftClickWhileTouched, Mode=TwoWay}" />
                         </toolkit:SettingsCard>
-                        <toolkit:SettingsCard
-                            Description="Cursor movement (px) when touch moves approx. 1 cm"
-                            Header="Horizontal mouse sensitivity"
-                            HeaderIcon="{ui:FontIcon Glyph=&#xE8AB;}">
+                        <toolkit:SettingsCard x:Uid="HorizontalMouseSensitivity" HeaderIcon="{ui:FontIcon Glyph=&#xE8AB;}">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition
@@ -240,10 +235,7 @@
                                     TextAlignment="Right" />
                             </Grid>
                         </toolkit:SettingsCard>
-                        <toolkit:SettingsCard
-                            Description="Cursor movement (px) when touch moves approx. 1 cm"
-                            Header="Vertical mouse sensitivity"
-                            HeaderIcon="{ui:FontIcon Glyph=&#xE8CB;}">
+                        <toolkit:SettingsCard x:Uid="VerticalMouseSensitivity" HeaderIcon="{ui:FontIcon Glyph=&#xE8CB;}">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition
